Fix styling issues with wrong font displaying and add redirects file for netlifly deployment

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -14,7 +14,7 @@ footer a {
   color: rgb(61, 218, 120);
 }
 
-footer p, div {
+footer p, footer div {
   margin-bottom: 0;
   font-family: 'Raleway', sans-serif;
 }
