--- a/src/components/intro.css
+++ b/src/components/intro.css
@@ -10,5 +10,4 @@ div.intro-content {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  font-family: 'Lustria', serif;
 }
